--- a/index.html
+++ b/index.html
@@ -1,13 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Kai's Github page</title>
+    <title>Kai's Github page</title>
+    <meta charset="UTF-8" />
 </head>
 <body>
-<h1>Kai's Github page</h1>
-<ul>
-    <li><a href="https://github.com/nodakai">github.com/nodakai</a>
-    <li><a href="http://nodakai.github.io/">nodakai.github.io</a>
-</ul>
+    <h1><a href="http://nodakai.github.io/">Kai's Github page</a></h1>
+
+    <section>
+    <h2>On this site</h2>
+    <ul>
+        <li><a href="graph.html">Planar graph by Rapha&euml;l</a></li>
+    </ul>
+    </section>
+
+    <section>
+    <h2>Back to</h2>
+    <ul>
+        <li><a href="https://github.com/nodakai">github.com/nodakai</a></li>
+    </ul>
+    </section>
+
 </body>
 </html>
